--- a/PoE PartyTool Tests/PoE Party-Invite.csproj
+++ b/PoE PartyTool Tests/PoE Party-Invite.csproj
@@ -50,7 +50,7 @@
     <Compile Include="PoE_PartyTool\LogProcessing\LogFileParser.cs" />
     <Compile Include="PoE_PartyTool\LogProcessing\LogFileReader.cs" />
     <Compile Include="PoE_PartyTool\Utilities\PoEProcessWatcher.cs" />
-    <Compile Include="ReverseLineReader.cs" />
+    <Compile Include="PoE_PartyTool\Utilities\ReverseLineReader.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
