--- a/PoE PartyTool Tests/PoE Party-Invite.csproj
+++ b/PoE PartyTool Tests/PoE Party-Invite.csproj
@@ -52,16 +52,16 @@
     <Compile Include="PoE_PartyTool\LogProcessing\LogFileReader.cs" />
     <Compile Include="PoE_PartyTool\Utilities\PoEProcessWatcher.cs" />
     <Compile Include="PoE_PartyTool\Utilities\ReverseLineReader.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="PartyInviteUI.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="PartyInviteUI.Designer.cs">
+      <DependentUpon>PartyInviteUI.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="PartyInviteUI.resx">
+      <DependentUpon>PartyInviteUI.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
